--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-icons": "^4.10.1",
     "react-is": "^16.13.1",
     "react-redux": "^8.0.5",
     "styled-components": "^5.3.11",
